--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=\, initial-scale=1.0">
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <link rel = "stylesheet" href="./style.css">
+
+  <title>Weather Dashboard</title>
+</head>
+
+
+
+<body>
+  <main>
+    <header class = 'container-flex'>
+      <h1 class = 'text-center bg-primary'>
+        <strong>Yo, What's the Weather?</strong>
+      </h1>
+    </header>
+
+
+
+
+
+
+
+
+
+
+  </main>
+  
+</body>
+</html>
